// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots for examples Output Snapshots button-basic should match the snapshot 1`] = `
<button
  class="btn btn-secondary"
  type="button"
>
  Test Button
</button>
`;

exports[`Snapshots for examples Output Snapshots button-link should match the snapshot 1`] = `
<a
  class="btn btn-secondary"
  href="#"
>
  Link Button
</a>
`;

exports[`Snapshots for examples Output Snapshots button-sizes should match the snapshot 1`] = `
<div>
  <button
    class="btn btn-secondary"
    type="button"
  >
    default
  </button>
   
  <button
    class="btn btn-secondary btn-lg"
    size="lg"
    type="button"
  >
    lg
  </button>
   
  <button
    class="btn btn-secondary btn-sm"
    size="sm"
    type="button"
  >
    sm
  </button>
</div>
`;

exports[`Snapshots for examples Output Snapshots button-variants should match the snapshot 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
    variant="primary"
  >
    primary
  </button>
   
  <button
    class="btn btn-secondary"
    type="button"
    variant="secondary"
  >
    secondary
  </button>
   
  <button
    class="btn btn-warning"
    type="button"
    variant="warning"
  >
    warning
  </button>
   
  <button
    class="btn btn-danger"
    type="button"
    variant="danger"
  >
    danger
  </button>
   
  <button
    class="btn btn-link"
    type="button"
    variant="link"
  >
    link
  </button>
</div>
`;

exports[`Snapshots for examples Output Snapshots link-basic should match the snapshot 1`] = `
<a
  class=""
  href="https://about.gitlab.com"
>
  Test Link
</a>
`;

exports[`Snapshots for examples Output Snapshots loading-icon-basic should match the snapshot 1`] = `
<div
  class="loading-container text-center"
>
  <i
    aria-hidden="true"
    aria-label="Loading"
    class="fa fa-spinner fa-1x fa-spin"
  />
</div>
`;

exports[`Snapshots for examples Output Snapshots loading-icon-big should match the snapshot 1`] = `
<div
  class="loading-container text-center"
>
  <i
    aria-hidden="true"
    aria-label="Loading"
    class="fa fa-spinner fa-5x fa-spin"
  />
</div>
`;

exports[`Snapshots for examples Output Snapshots loading-icon-inline should match the snapshot 1`] = `
<div>
  <span
    class="loading-container text-center"
  >
    <i
      aria-hidden="true"
      aria-label="Loading"
      class="fa fa-spinner fa-1x fa-spin"
    />
  </span>
   Testing Inline Icon

</div>
`;

exports[`Snapshots for examples Output Snapshots modal-basic should match the snapshot 1`] = `
<div>
  <button
    type="button"
  >
    
    Open modal
  
  </button>
   
  <div>
    <!---->
  </div>
</div>
`;

exports[`Snapshots for examples Output Snapshots pagination-basic should match the snapshot 1`] = `
<ul
  aria-disabled="false"
  aria-label="Pagination"
  class="gl-pagination pagination b-pagination pagination-md"
  role="menubar"
>
  <!---->
  <li
    class="page-item"
    role="none presentation"
  >
    <a
      aria-label="Goto previous page"
      class="page-link"
      href="#"
      role="menuitem"
      tabindex="-1"
      target="_self"
    >
      <span
        aria-hidden="true"
      >
        ‹
      </span>
    </a>
  </li>
  <!---->
  <li
    class="page-item"
    role="none presentation"
  >
    <a
      aria-checked="false"
      aria-label="Goto page 1"
      aria-posinset="1"
      aria-setsize="10"
      class="page-link"
      href="#"
      role="menuitemradio"
      tabindex="-1"
      target="_self"
    >
      1
    </a>
  </li>
  <li
    class="page-item active"
    role="none presentation"
  >
    <a
      aria-checked="true"
      aria-label="Goto page 2"
      aria-posinset="2"
      aria-setsize="10"
      class="page-link btn-primary"
      href="#"
      role="menuitemradio"
      tabindex="0"
      target="_self"
    >
      2
    </a>
  </li>
  <li
    class="page-item"
    role="none presentation"
  >
    <a
      aria-checked="false"
      aria-label="Goto page 3"
      aria-posinset="3"
      aria-setsize="10"
      class="page-link"
      href="#"
      role="menuitemradio"
      tabindex="-1"
      target="_self"
    >
      3
    </a>
  </li>
  <li
    class="page-item d-none d-sm-flex"
    role="none presentation"
  >
    <a
      aria-checked="false"
      aria-label="Goto page 4"
      aria-posinset="4"
      aria-setsize="10"
      class="page-link"
      href="#"
      role="menuitemradio"
      tabindex="-1"
      target="_self"
    >
      4
    </a>
  </li>
  <li
    class="page-item d-none d-sm-flex"
    role="none presentation"
  >
    <a
      aria-checked="false"
      aria-label="Goto page 5"
      aria-posinset="5"
      aria-setsize="10"
      class="page-link"
      href="#"
      role="menuitemradio"
      tabindex="-1"
      target="_self"
    >
      5
    </a>
  </li>
  <li
    class="page-item d-none d-sm-flex"
    role="none presentation"
  >
    <a
      aria-checked="false"
      aria-label="Goto page 6"
      aria-posinset="6"
      aria-setsize="10"
      class="page-link"
      href="#"
      role="menuitemradio"
      tabindex="-1"
      target="_self"
    >
      6
    </a>
  </li>
  <li
    class="page-item d-none d-sm-flex"
    role="none presentation"
  >
    <a
      aria-checked="false"
      aria-label="Goto page 7"
      aria-posinset="7"
      aria-setsize="10"
      class="page-link"
      href="#"
      role="menuitemradio"
      tabindex="-1"
      target="_self"
    >
      7
    </a>
  </li>
  <li
    class="page-item d-none d-sm-flex"
    role="none presentation"
  >
    <a
      aria-checked="false"
      aria-label="Goto page 8"
      aria-posinset="8"
      aria-setsize="10"
      class="page-link"
      href="#"
      role="menuitemradio"
      tabindex="-1"
      target="_self"
    >
      8
    </a>
  </li>
  <li
    class="page-item d-none d-sm-flex"
    role="none presentation"
  >
    <a
      aria-checked="false"
      aria-label="Goto page 9"
      aria-posinset="9"
      aria-setsize="10"
      class="page-link"
      href="#"
      role="menuitemradio"
      tabindex="-1"
      target="_self"
    >
      9
    </a>
  </li>
  <li
    class="page-item d-none d-sm-flex"
    role="none presentation"
  >
    <a
      aria-checked="false"
      aria-label="Goto page 10"
      aria-posinset="10"
      aria-setsize="10"
      class="page-link"
      href="#"
      role="menuitemradio"
      tabindex="-1"
      target="_self"
    >
      10
    </a>
  </li>
  <!---->
  <li
    class="page-item"
    role="none presentation"
  >
    <a
      aria-label="Goto next page"
      class="page-link"
      href="#"
      role="menuitem"
      tabindex="-1"
      target="_self"
    >
      <span
        aria-hidden="true"
      >
        ›
      </span>
    </a>
  </li>
  <!---->
</ul>
`;

exports[`Snapshots for examples Output Snapshots progress-bar-basic should match the snapshot 1`] = `
<div
  class="progress"
  value="30"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="progress-bar"
    role="progressbar"
    style="width: 30%;"
  >
    <!---->
  </div>
</div>
`;

exports[`Snapshots for examples Output Snapshots skeleton-loading-basic should match the snapshot 1`] = `
<div
  class="animation-container"
>
  <div
    class="skeleton-line-1"
  />
  <div
    class="skeleton-line-2"
  />
  <div
    class="skeleton-line-3"
  />
</div>
`;

exports[`Snapshots for examples Output Snapshots skeleton-loading-one-line should match the snapshot 1`] = `
<div
  class="animation-container"
>
  <div
    class="skeleton-line-1"
  />
</div>
`;

exports[`Snapshots for examples Output Snapshots tooltip-component-default should match the snapshot 1`] = `
<div>
  <button
    class="btn btn-secondary"
    id="ref2"
    type="button"
  >
    Testbutton
  </button>
   
  <div
    aria-hidden="true"
    class="d-none"
    style="display: none;"
  >
    <div>
      
    some 
    
      <em>
        tooltip
      </em>
      
    text
  
    </div>
  </div>
</div>
`;

exports[`Snapshots for examples Output Snapshots tooltip-directive-bottom should match the snapshot 1`] = `
<button
  class="btn btn-secondary"
  data-original-title="some tooltip text"
  title=""
  type="button"
>
  
  Testbutton

</button>
`;

exports[`Snapshots for examples Output Snapshots tooltip-directive-default should match the snapshot 1`] = `
<button
  class="btn btn-secondary"
  data-original-title="some tooltip text"
  title=""
  type="button"
>
  
  Testbutton

</button>
`;

exports[`Snapshots for examples Output Snapshots tooltip-directive-left should match the snapshot 1`] = `
<div
  class="d-flex align-items-center justify-content-center p-3"
>
  <button
    class="btn btn-secondary"
    data-original-title="some tooltip text"
    title=""
    type="button"
  >
    
    Testbutton
  
  </button>
</div>
`;

exports[`Snapshots for examples Output Snapshots tooltip-directive-right should match the snapshot 1`] = `
<button
  class="btn btn-secondary"
  data-original-title="some tooltip text"
  title=""
  type="button"
>
  
  Testbutton

</button>
`;
